# ai-mce

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  start.sh
api-server/: alembic.ini  pyproject.toml
api-server/ai_mce_api_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api-server/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  supabase_client.py
api-server/app/alembic/: env.py
api-server/app/alembic/versions/: 0001_initial.py  0002_fix_capture_dedup_key.py  0003_add_message_count.py  0004_add_session_id.py  0005_profile_tables.py
api-server/app/profile/: brief.py  cleaning.py  confidence.py  diff.py  digest.py  distiller.py  dream.py  llm.py  models.py  queue.py  redact.py  scheduler.py  segmenter.py
api-server/app/routes/: auth.py  captures.py  profile.py
api-server/tests/: test_auth.py  test_captures.py  test_health.py  test_models.py  test_supabase_client.py
api-server/tests/profile/: conftest.py  test_brief.py  test_capture_hook.py  test_cleaning.py  test_confidence.py  test_config.py  test_db.py  test_diff.py  test_digest.py  test_distiller.py  test_dream.py  test_llm.py  test_models.py  test_profile_api.py  test_queue.py  test_redact.py  test_scheduler.py  test_segmenter.py
console/: CLAUDE.md  index.html  package.json  server.ts
design/: .thumbnail  AI Memory Capture · UI 设计.html  screens-auth.jsx  screens-console.jsx  screens-extension.jsx  shared-ui.jsx  tokens.css
doc/: AI_Memory_Capture_Extension_最终版产品计划说明书.md
docs/: deploy-local-dev.md  deploy-local.md  deploy-server.md  desktop-channel-design-decisions.md
(+232 files in other folders)
